# rouge_haddock_bevy

./: Cargo.toml  clippy.toml  index.html  index2.html
.github/workflows/: release.yaml
assets/sprites/: back_attribution.txt  button_small.ron  button_small.xcf  environment_spritesheet.xcf  food.ron  food.xcf  gametile_spritesheet.ron  haddock.ron  haddock.xcf  haddock_spritesheet.ron  prey_snail_spritesheet.ron  projectile_spritesheet.ron  shark_spritesheet.ron  tilemap_spritesheet.ron
assets/sprites/raw/: background.ase  crab.ase  gui_background.ase  haddock.ase  health_fish.ase  hook.ase  hub_background.ase  jelly.ase  jelly_charge_indicator.ase  jelly_lightning.aseprite  nine_patch_rect_window.ase  power_bolt.ase  prey_snail.ase  prey_snail2.ase  prey_snail_spritesheet.json  projectile.ase  seahorse.ase  shark.ase  shark_base.ase  shark_spritesheet.json  snail.ase  tiled_object_tilemap.ase  tilemap.ase  vortex.ase  whale.ase  whirlpool.ase
assets/ui/: arrow_button.ron  gui_background.ron  health_fish.ron  heart_spritesheet.ase  help_card.ase  tickbox_off.ron
assets/ui/raw/: arrow_button.ase  button_npr.ase  heart.ase  tickbox.ase  tickbox.json
saves/: save_00.ron  save_01.ron
src/: lib.rs  main.rs  serve.py
src/asset_handling/: asset.rs  loading.rs  mod.rs
src/game/: components.rs  debug.rs  end_game.rs  enemy.rs  events.rs  game.rs  mod.rs  movement.rs  projectile.rs  snails.rs  tilemap.rs  timed_removal.rs  turn.rs  ui.rs  ui_overlay.rs
src/game_menus/: components.rs  hub_menu.rs  load_menu.rs  mod.rs  new_game_menu.rs  store_menu.rs
src/helpers/: builders.rs  cleanup.rs  error_handling.rs  mod.rs
src/main_menu/: components.rs  menu.rs
src/map_gen/: cell_map.rs  map_gen.rs  mod.rs
src/menu/: components.rs  menu.rs  mod.rs
src/menu_core/: helpers.rs  menu_core.rs  mod.rs  nodes.rs  nodes_.rs  structure.rs
src/profiles/: profiles.rs
wasm/: fix-chrome-audio.js  index.html
