[package]
name = "rouge_haddock_bevy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "rouge_haddock_bevy_lib"
path = "src/lib.rs"

[[bin]]
name = "rouge_haddock_bevy"
path = "src/main.rs"


[dependencies]
# TODO: use official release when the Eq/PartialEq changes are minted
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap" }
# bevy_ecs_tilemap = { version ="0.6.0", features = ["atlas"] }
num = "0.4"
log = "0.4.14"
simple_logger = "2.1.0"
rand = "0.8.4"
image = "0.24.0"
winit = "0.26.1"
array2d = "0.2.1"
interpolation = "0.2.0"
code_location = "1.1.0"
strum = "0.24.0"
strum_macros = "0.24.0"
ron = "0.7.0"
serde = "1.0.136"

#Below re-implement as wasm32 only later ...
#[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.59", features = ["Storage", "Window"]}
wasm-bindgen = "0.2.81"
js-sys = "0.3.58"
####

[dependencies.bevy]
version = "0.8.0"
default-features=false
# Sadly compiling with "Dynamic" casuses a msvc "fatal error LNK1189: library limit of 65535 objects exceeded"
# Excluding vorbis and bevy_audio in favour of bevy_kira_audio crate
features = [
    "render",
    "bevy_winit",
    "bevy_gilrs",
    "png",
    "hdr",
    "x11",
    "filesystem_watcher",
]

[dependencies.bevy_kira_audio]
version = "0.11.0"
features = ["wav", "flac"]



